force-app/main/default/objects/custom_create342__c/custom_create342__c.object-meta.xml
<CustomObject>
    <label>Custom created object342</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects342</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>