force-app/main/default/objects/custom_create342__c/fields/custom_create_342field519__c.field-meta.xml
<CustomField>
    <fullName>custom_create_342field519__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 342field519</label>
    <type>Checkbox</type>
</CustomField>